[project]
name = "physt"
version = "0.6.0a1"
description = "P(i/y)thon h(i/y)stograms."
readme = "README.md"
requires-python = "~=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Jan Pipek", email="jan.pipek@gmail.com"}
]
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20",
    "packaging",
    "typing_extensions",
    "hypothesis"
]
# dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "types-setuptools"]
# doc = ["sphinx", "sphinx_rtd_theme", "sphixncontrib-apidoc", "nbsphinx"]
dask = ["dask[array]"]
pandas = ["pandas"]
xarray = ["xarray"]
matplotlib = ["matplotlib"]
plotly = ["plotly"]
vega3 = ["vega3"]
folium = ["folium"]
root = ["uproot3"]  # TODO: Update to uproot4
xtermcolor = ["xtermcolor"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
