[project]
name = "physt"
version = "0.6.0a1"
description = "P(i/y)thon h(i/y)stograms."
readme = "README.md"
requires-python = "~=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Jan Pipek", email="jan.pipek@gmail.com"}
]
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.22",
    "packaging",
    "typing_extensions",
    "hypothesis"
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "types-setuptools"]
# doc = ["sphinx", "sphinx_rtd_theme", "sphixncontrib-apidoc", "nbsphinx"]
dask = ["dask[array]"]
pandas = ["pandas"]
xarray = ["xarray"]
matplotlib = ["matplotlib>=2.0"]
plotly = ["plotly"]
vega3 = ["vega3"]
folium = ["folium"]
root = ["uproot3"]  # TODO: Update to uproot4
xtermcolor = ["xtermcolor"]
all = [
    "physt[dev,dask,pandas,xarray,matplotlib,plotly,vega3,folium,root,xtermcolor]"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.mypy]
# TODO: revisit
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.isort]
profile = "black"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
