[project]
name = "physt"
version = "0.8.0"
description = "P(i/y)thon h(i/y)stograms."
readme = "README.md"
requires-python = "~=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Jan Pipek", email = "jan.pipek@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.22",
    "packaging",
    "typing_extensions",
    "hypothesis>=6.96.1",
]

[project.optional-dependencies]
dev = ["pytest", "mypy>=1.8", "types-setuptools", "bumpver", "pytest-xdist"]
# doc = ["sphinx", "sphinx_rtd_theme", "sphixncontrib-apidoc", "nbsphinx"]
astropy = ["astropy"]
dask = ["dask[array]>=2023.0"]
pandas = ["pandas>=1.3"]
polars = ["polars>=0.20.17", "pyarrow", "physt[pandas]"]
xarray = ["xarray"]
matplotlib = ["matplotlib>=3.0"]
plotly = ["plotly"]
# TODO: Re-enable vega
# vega3 = ["vega3"]
folium = ["folium"]
# root = ["uproot3"]  # TODO: Update to uproot4
scipy = ["scipy"]
xtermcolor = ["xtermcolor"]
all = [
    "physt[astropy,dev,dask,pandas,polars,xarray,matplotlib,plotly,folium,scipy,xtermcolor]",
]

[build-system]
requires = ["setuptools>=65.0", "build"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.mypy]
# TODO: revisit
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
exclude = ["doc"]

[tool.isort]
profile = "black"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Be a bit tolerant
# line-length = 100
extend-exclude = ["doc"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["E402"]


[tool.bumpver]
current_version = "v0.8.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version: {old_version} → {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"src/physt/version.py" = ['__version__ = "{pep440_version}"']
"conda/meta.yaml" = ['{% set version = "{pep440_version}" %}']
